--- a/index.html
+++ b/index.html
@@ -1,12 +1,159 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cours html</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="logo">
+            <img class="img-logo" src="logo.png" alt="logo du site">
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="#"></a>Catégorie</li>
+                <li><a href="#"></a>A Propos</li>
+                <li><a href="#"></a>Contact</li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <main>
+        <aside>
+            <!-- <div class="categorie1">
+                <h3>Crème glacée</h3>
+            </div>
+            <div class="categorie">
+                <h3>Sorbet</h3>
+            </div>
+            <div class="categorie">
+                <h3>Yaourt glacée</h3>
+            </div>
+            <div class="categorie">
+                <h3>Cornets</h3>
+            </div>
+            <div class="categorie">
+                <h3>Glace en bâton</h3>
+            </div> -->
+
+        <ul class="accordeon">
+            <li class="sub-acc">
+                <label for="menu1">Crème glaçée</label>
+                <input id="menu1" type="checkbox" name="menu">
+                <div class="espace-menu"></div>
+            </li>
+            <li class="sub-acc">
+                <label for="menu2">Sorbet</label>
+                <input id="menu2" type="checkbox" name="menu">
+                <div class="espace-menu"></div>
+            </li>
+            <li class="sub-acc">
+                <label for="menu3">Yaourt glaçée</label>
+                <input id="menu3" type="checkbox" name="menu">
+                <div class="espace-menu"></div>
+            </li>
+            <li class="sub-acc">
+                <label for="menu4">Cornet</label>
+                <input id="menu4" type="checkbox" name="menu">
+                <div class="espace-menu"></div>
+            </li>
+            <li class="sub-acc">
+                <label for="menu5">Glace en bâton</label>
+                <input id="menu5" type="checkbox" name="menu">
+                <div class="espace-menu"></div>
+            </li>
+        </ul>      
+
+        </aside>
+        <section class="corps">
+            <nav class="breadcrumb">
+                <ul>
+                    <li>Accueil</li>
+                    <li>Catégorie</li>
+                    <li>Article</li>
+                </ul>
+            </nav>
+            <div class="titre-principal">
+                <h1>Vivement l'été pour manger des glaces</h1>
+            </div>
+            <div class="banniere"></div>
+            <article class="article">
+                <h2>Magnum, Häagen-Dazs ou Ben and Jerry? </h2>
+                <div class="art">
+                    <div>
+                        <img class="img-art" src="/img/icecream2.jpg" alt="crème glacé en cornet">
+                    </div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A officia animi deleniti, modi,
+                        commodi, pariatur libero voluptatem consectetur vero unde ab tenetur nam similique iste. Veniam
+                        a doloremque, voluptatum molestias repellendus possimus assumenda totam non, cupiditate fugit
+                        quod dignissimos esse magni quas, enim in blanditiis exercitationem excepturi nesciunt iste.
+                        Iure, aliquid. Officia iure est quo saepe harum, adipisci perspiciatis nesciunt ducimus aut amet
+                        deleniti magnam eos excepturi nam dolores ut consequuntur totam eius ab sit exercitationem,
+                        nostrum id tempore itaque. Aspernatur pariatur fuga deleniti labore, quis iusto sapiente quidem
+                        adipisci voluptatibus impedit atque, temporibus, ipsum incidunt laudantium nulla libero harum
+                        rem laboriosam explicabo quos inventore doloremque similique voluptatem? Quibusdam, mollitia
+                        voluptates corporis temporibus maiores optio aspernatur minima, voluptatum, ipsum non asperiores
+                        vel consectetur illum ut. Voluptates tempora quidem et ullam tempore, nam, esse velit officiis,
+                        inventore natus maxime iste aliquam eius voluptatem at nulla mollitia nesciunt incidunt dolore
+                        consequatur! Ullam, mollitia aut eligendi fuga velit vel nulla placeat hic perspiciatis vitae ab
+                        eaque sint tempore! Totam fugiat veritatis animi unde commodi delectus rerum, eos, dolores quam
+                        autem odio nemo dolore architecto ab, voluptates sed eius officia beatae earum quaerat libero
+                        sit dolorem quod labore! Aliquam, aliquid? Consequatur, quam velit mollitia, nostrum nemo minus,
+                        nobis ab ipsum necessitatibus dolores officiis rem est aspernatur eos. Voluptas possimus facilis
+                        doloribus tempora accusantium quia, suscipit provident molestias natus mollitia ipsa voluptatum
+                        illo labore animi, qui quam veritatis ipsum, dolorum tenetur eaque impedit ipsam modi. Id iusto
+                        porro minus harum! Deserunt asperiores accusantium ex ab?</p>
+                </div>
+            </article>
+            <article class="article">
+                <h2>Cornet ou pot? Américaine ou à l'italienne? </h2>
+                <div class="art">
+                    <div>
+                        <img class="img-art" src="/img/icecream3.jpg" alt="">
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident aut est suscipit id earum
+                        excepturi commodi hic cupiditate, rerum cum quas voluptatem consequuntur officia culpa eius
+                        animi ea! Expedita atque tempore magni dolore impedit, culpa eos laudantium, pariatur laboriosam
+                        velit illo, optio cumque. Autem, illum voluptatum non dignissimos quod impedit ipsum dolor!
+                        Assumenda, quas? Dolorem, repellendus eos magnam obcaecati animi quis molestiae quia ipsa velit
+                        distinctio maxime rem quae perferendis voluptas rerum asperiores porro commodi, maiores delectus
+                        iste quibusdam expedita voluptatum minima. Ex in quod quibusdam autem eum magnam accusamus.
+                        Ipsum, inventore nulla porro laboriosam molestias dolore dignissimos fuga illum dicta atque aut
+                        dolor, quae odio, ad placeat. Laborum asperiores aliquid neque placeat molestias odio eos illum
+                        at hic veritatis consequatur unde possimus sed, dolore nostrum ratione labore ipsum inventore
+                        earum accusantium voluptatum? Vitae sit exercitationem, perferendis dolorum laboriosam suscipit
+                        enim laudantium. Eos alias eligendi consequuntur dolore fugiat? Sit voluptatibus soluta ut amet
+                        consectetur, voluptates ex a in commodi aut doloremque perferendis voluptatum nam provident
+                        iste, quis reprehenderit vero fuga numquam labore ipsum ad, voluptas at accusamus. Quisquam
+                        suscipit atque, consequuntur delectus iusto odit labore esse soluta ipsam totam vitae architecto
+                        pariatur ex, accusamus temporibus id nisi quae ipsum nesciunt libero culpa fugiat? Veniam eaque
+                        tenetur earum atque incidunt deleniti dolorum, deserunt voluptates sunt magni possimus minima
+                        iste praesentium quo explicabo ut voluptatibus. Adipisci aut velit, quo, nam iste deleniti
+                        accusamus dolore, itaque impedit neque dolores. Asperiores dolores quos tempora consequatur quis
+                        sequi vitae illum sit laudantium veritatis. Vitae, ab?</p>
+                </div>
+            </article>
+        </section>
+
+    </main>
+    <footer>
+        <address>
+            <h3>Le Paradis des glaces</h3>
+            <p>112 rue de la crème glacée <br>
+                99000 Gervais</p>
+        </address>
+        <div class="copyright">
+            <p>@Copyright</p>
+            <p>La Laitière</p>
+        </div>
+
+    </footer>
 </body>
+
 </html>
